[package]
name = "arbite-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.67"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "macros"] }
bytes = { version = "1.1.0", features = ["serde"] }
http-body-util = "0.1.0-rc.2" 

# optional dependencies
base64 = { version = "0.21.0", optional = true }
headers = { version = "0.3.7", optional = true }
multer = { version = "2.0.0", optional = true }
serde_json = { version = "1.0", features = ["raw_value"], optional = true }
[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["serde-human-readable"] }
tracing = "0.1"
uuid = { version = "1.0", features = ["serde", "v4"] }