[package]
name = "sept"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
actix-web = { version = "4", features = ["rustls"] }
actix-http = "^3"
actix-tls = "^3"
actix-rt = "^2.8"
chrono = "0.4.12"
futures-util = "^0.3"
listenfd = "1"
rustls = { version = "^0.21", optional = true }
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.sept_codegen]
version = "0.1.0"
path = "../codegen"

[features]
default = ["rustls"]

[lib]
path = "./src/lib.rs"

[build-dependencies]
version_check = "0.9"
